--- a/index.html
+++ b/index.html
@@ -115,12 +115,13 @@ tags: about
   <br />
   <ul>
 
-    <!-- <li>
-        <p>[Nov 2022] One first-authored <a href="https://arxiv.org/abs/2204.08808" class="uline">SePiCo</a> for domain adaptive semantic segmentation was accepted to <font color="red">T-PAMI</font> (IF: 24.31)!</p>
-      </li> -->
+    <li>
+        <p>[Jan 2023] One first-authored <a href="https://arxiv.org/abs/2204.08808" class="uline">SePiCo</a> for domain adaptive semantic segmentation was accepted to <font color="red">T-PAMI</font> (IF: 24.31)!</p>
+      </li>
 
     <li>
-      <p>[Nov 2022] One co-authored <a href="https://arxiv.org/abs/2211.12256" class="uline">paper</a> for semantic
+      <p>[Nov 2022] One co-authored <a href="https://arxiv.org/abs/2211.12256" class="uline"> 
+        <font color="red">ORAL paper</font></a> for semantic
         segmentation in adverse conditions was accepted to AAAI 2023!</p>
     </li>
 
@@ -198,7 +199,7 @@ tags: about
     <tbody>
 
 
-      <!-- ArXiv SePiCO -->
+      <!-- TPAMI SePiCO -->
       <tr>
         <td valign="middle" width="35%">
           <div class="one" style="text-align:center;">
@@ -210,8 +211,8 @@ tags: about
             SePiCo: Semantic-Guided Pixel Contrast for Domain Adaptive Semantic Segmentation
           </h5>
           <p>
-            <a href="https://arxiv.org/abs/2204.08808" class="uline-special"><span style="color:red">arXiv
-                preprint</span></a>
+            <a href="https://ieeexplore.ieee.org/abstract/document/9366353/" class="uline-special"><span
+              style="color:red">T-PAMI (IF: 24.31)</span></a>
           </p>
           <p>
             <b>Binhui Xie</b>, Shuang Li, Mingjia Li, Chi Harold Liu, Gao Huang, Guoren Wang
@@ -241,7 +242,7 @@ tags: about
           </h5>
           <p>
             <a href="https://aaai.org/Conferences/AAAI-23/" class="uline-special"><span style="color:red">AAAI
-                2023</span></a>
+                2023 (Oral)</span></a>
           </p>
           <p>
             Mingjia Li*, <b>Binhui Xie*</b>, Shuang Li, Chi Harold Liu, Xinjing Cheng
@@ -254,9 +255,9 @@ tags: about
             aria-pressed="true">Paper</a>
           <a href="https://github.com/BIT-DA/VBLC" class="btn btn-outline-primary btn-sm" role="button"
             aria-pressed="true">Code</a>
-          <!-- <a href="https://www.bilibili.com/video/BV1qa411h7Xm?share_source=copy_web" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Video</a>
-              <a href="https://www.dropbox.com/s/8ozwc8uw1q1tqlf/eada_slides.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Slides</a>
-              <a href="https://www.dropbox.com/s/xdtcd3iifb7xd06/eada_poster.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Poster</a> -->
+          <a href="https://www.bilibili.com/video/av692744964" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Video</a>
+            <!-- <a href="https://www.dropbox.com/s/8ozwc8uw1q1tqlf/eada_slides.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Slides</a> -->
+            <a href="https://www.dropbox.com/s/pvb2701k2gr9cfb/aaai23poster.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Poster</a>
         </td>
       </tr>
 
@@ -480,7 +481,7 @@ tags: about
 
 
       <!-- TCYB CSDN -->
-      <tr>
+      <!-- <tr>
             <td valign="middle" width="35%">
                 <div class="one" style="text-align:center;">
                     <img src="images/tcyb_CSDN.png" style="max-height: 300px;">
@@ -502,7 +503,7 @@ tags: about
                 <a href="https://ieeexplore.ieee.org/document/9756672" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Paper</a>
                 <a href="https://github.com/BIT-DA/CSDN" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Code</a>
             </td>
-        </tr>
+        </tr> -->
 
 
       <!-- AAAI DCAN -->
