--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ tags: about
             SePiCo: Semantic-Guided Pixel Contrast for Domain Adaptive Semantic Segmentation
           </h5>
           <p>
-            <a href="https://ieeexplore.ieee.org/abstract/document/9366353/" class="uline-special"><span
+            <a href="https://ieeexplore.ieee.org/document/10018569" class="uline-special"><span
               style="color:red">T-PAMI (IF: 24.31)</span></a>
           </p>
           <p>
