--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ tags: about
   </p>
 
   <p>
-    My research interests are in transfer learning and data-efficient learning (particularly domain adaptation, active
-    learning) and self-supervised learning across visual tasks and domains.
+    My research interests are in foundation models, transfer learning, and data-efficient learning.
+    <!-- My research interests are in transfer learning and data-efficient learning (particularly domain adaptation, active learning) and self-supervised learning across visual tasks and domains. -->
     <!-- Apart from work, I enjoy running, basketball, badminton, music. -->
   </p>
 
@@ -116,13 +116,18 @@ tags: about
   <ul>
 
     <li>
-        <p>[Jan 2023] One first-authored <a href="https://arxiv.org/abs/2204.08808" class="uline">SePiCo</a> for domain adaptive semantic segmentation was accepted to <font color="red">T-PAMI</font> (IF: 24.31)!</p>
+      <p>[Feb 2023] Two co-authored papers (<a href="https://arxiv.org/abs/2211.07636" class="uline"> 
+        <font color="red">EVA</font></a>, <a href="binhuixie.github.io" class="uline"> 
+          <font color="red">RoTTA</font></a>) are accepted by CVPR 2023!</p>
+    </li>
+    <li>
+        <p>[Jan 2023] One first-authored <a href="https://arxiv.org/abs/2204.08808" class="uline">SePiCo</a> for domain adaptive semantic segmentation is accepted by <font color="red">T-PAMI</font> (IF: 24.31)!</p>
       </li>
 
     <li>
       <p>[Nov 2022] One co-authored <a href="https://arxiv.org/abs/2211.12256" class="uline"> 
         <font color="red">ORAL paper</font></a> for semantic
-        segmentation in adverse conditions was accepted to AAAI 2023!</p>
+        segmentation in adverse conditions is accepted by AAAI 2023!</p>
     </li>
 
     <li>
@@ -131,23 +136,23 @@ tags: about
 
     <li>
       <p>[Jun 2022] One first-authored <a href="https://ieeexplore.ieee.org/document/9803869" class="uline">paper</a>
-        was accepted to TKDE!</p>
+        is accepted by TKDE!</p>
     </li>
 
     <li>
       <p>[Mar 2022] One first-authored <a href="https://arxiv.org/abs/2111.12940" class="uline">
           <font color="red">ORAL paper</font>
-        </a> for data-efficient semantic segmentation was accepted to CVPR 2022!</p>
+        </a> for data-efficient semantic segmentation is accepted by CVPR 2022!</p>
     </li>
 
     <li>
       <p>[Dec 2021] One first-authored <a href='https://arxiv.org/abs/2112.01406' class='uline'>paper</a> for active
-        domain adaptation was accepted to AAAI 2022!</p>
+        domain adaptation is accepted by AAAI 2022!</p>
     </li>
 
     <li>
       <p>[Feb 2021] One co-authored <a href='https://arxiv.org/abs/2103.12339' class='uline'>paper</a> for domain
-        adaptation was accepted to <font color="red">T-PAMI</font> (IF: 24.31)!</p>
+        adaptation is accepted by <font color="red">T-PAMI</font> (IF: 24.31)!</p>
     </li>
   </ul>
   <a id="readMore" class="uline" href="#" onclick="readMore();return false;">
@@ -159,27 +164,27 @@ tags: about
     <ul>
       <li>
         <p>[Apr 2022] One co-authored <a href='https://ieeexplore.ieee.org/document/9756672' class='uline'>paper</a> for
-          partial domain adaptation was accepted to T-CYB!</p>
+          partial domain adaptation is accepted by T-CYB!</p>
       </li>
 
       <li>
         <p>[Dec 2020] One co-authored <a href='https://arxiv.org/abs/2012.06995' class='uline'>paper</a> for
-          bi-classifier domain adaptation was accepted to AAAI 2021!</p>
+          bi-classifier domain adaptation is accepted by AAAI 2021!</p>
       </li>
 
       <li>
         <p>[Jul 2020] One co-authored <a href='https://arxiv.org/abs/2008.01677' class='uline'>paper</a> for
-          heterogeneous domain adaptation was accepted to ACM MM 2020!</p>
+          heterogeneous domain adaptation is accepted by ACM MM 2020!</p>
       </li>
 
       <li>
         <p>[Dec 2019] One co-authored <a href='https://arxiv.org/abs/2005.06717' class='uline'>paper</a> for domain
-          adaptation was accepted to AAAI 2020!</p>
+          adaptation is accepted by AAAI 2020!</p>
       </li>
 
       <li>
         <p>[Jul 2019] My starting <a href='https://dl.acm.org/doi/abs/10.1145/3343031.3351070' class='uline'>research
-            journey</a> was accepted to ACM MM 2019!</p>
+            journey</a> is accepted by ACM MM 2019!</p>
       </li>
   </span>
   </ul>
@@ -215,18 +220,77 @@ tags: about
               style="color:red">T-PAMI (IF: 24.31)</span></a>
           </p>
           <p>
-            <b>Binhui Xie</b>, Shuang Li, Mingjia Li, Chi Harold Liu, Gao Huang, Guoren Wang
+            <b>Binhui Xie</b>, Shuang Li, Mingjia Li, Chi Harold Liu, Gao Huang, and Guoren Wang
           </p>
           <p>
             A novel one-stage adaptation framework that highlights the semantic concepts of individual pixel to promote
             learning of class-discriminative and class-balanced pixel embedding space across domains.
           </p>
+          <a href="blog/sepico-web/index.html" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Project</a>
           <a href="https://arxiv.org/abs/2204.08808" class="btn btn-outline-primary btn-sm" role="button"
             aria-pressed="true">Paper</a>
           <a href="https://github.com/BIT-DA/SePiCo" class="btn btn-outline-primary btn-sm" role="button"
             aria-pressed="true">Code</a>
         </td>
       </tr>
+
+      <!-- CVPR EVA -->
+      <tr>
+        <td valign="middle" width="35%">
+          <div class="one" style="text-align:center;">
+            <img src="images/cvpr2023_eva.png" style="max-height: 300px;">
+          </div>
+        </td>
+        <td valign="middle" width="65%">
+          <h5>
+            EVA: Exploring the Limits of Masked Visual Representation Learning at Scale
+          </h5>
+          <p>
+            <a href="https://cvpr2023.thecvf.com" class="uline-special"><span style="color:red">CVPR 2023</span></a>
+          </p>
+          <p>
+            Yuxin Fang, Wen Wang, <b>Binhui Xie</b>, Quan Sun, Ledell Yu Wu, Xinggang Wang, Tiejun Huang, Xinlong Wang, and Yue Cao
+          </p>
+          <p>
+            EVA is the first open-sourced billion-scale vision foundation model that achieves state-of-the-art performance on a broad range of downstream tasks.
+          </p>
+          <a href="https://arxiv.org/abs/2211.07636" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Paper</a>
+          <a href="https://github.com/baaivision/EVA" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Code</a>
+          <!-- <a href="https://www.bilibili.com/video/av692744964" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Video</a> -->
+          <!-- <a href="https://www.dropbox.com/s/8ozwc8uw1q1tqlf/eada_slides.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Slides</a> -->
+          <!-- <a href="https://www.dropbox.com/s/pvb2701k2gr9cfb/aaai23poster.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Poster</a> -->
+        </td>
+      </tr>
+
+      <!-- CVPR RoTTA -->
+      <!-- <tr>
+        <td valign="middle" width="35%">
+          <div class="one" style="text-align:center;">
+            <img src="images/cvpr2023_rotta.png" style="max-height: 300px;">
+          </div>
+        </td>
+        <td valign="middle" width="65%">
+          <h5>
+            Robust Test-Time Adaptation in Dynamic Scenarios
+          </h5>
+          <p>
+            <a href="https://cvpr2023.thecvf.com" class="uline-special"><span style="color:red">CVPR 2023</span></a>
+          </p>
+          <p>
+            Longhui Yuan*, <b>Binhui Xie*</b>, and Shuang Li
+          </p>
+          <p>
+            RoTTA presents a new practical test-time adaptation setting where environments gradually change and the test data is sampled correlatively over time.
+          </p>
+          <a href="https://arxiv.org/abs/xxx" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Paper</a>
+          <a href="https://github.com/BIT-DA/RoTTA" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Code</a>
+        </td>
+      </tr> -->
 
       <!-- AAAI VBLC -->
       <tr>
@@ -245,12 +309,14 @@ tags: about
                 2023 (Oral)</span></a>
           </p>
           <p>
-            Mingjia Li*, <b>Binhui Xie*</b>, Shuang Li, Chi Harold Liu, Xinjing Cheng
+            Mingjia Li*, <b>Binhui Xie*</b>, Shuang Li, Chi Harold Liu, and Xinjing Cheng
           </p>
           <p>
             VBLC tackles the problem of domain adaptive semantic segmentation under adverse conditions, getting rid of
             reference images.
           </p>
+          <a href="https://kiwixr.github.io/projects/vblc" class="btn btn-outline-primary btn-sm" role="button"
+          aria-pressed="true">Project</a>
           <a href="https://arxiv.org/abs/2211.12256" class="btn btn-outline-primary btn-sm" role="button"
             aria-pressed="true">Paper</a>
           <a href="https://github.com/BIT-DA/VBLC" class="btn btn-outline-primary btn-sm" role="button"
@@ -279,7 +345,7 @@ tags: about
               class="uline-special"><span style="color:red">CVPR 2022 (Oral)</span></a>
           </p>
           <p>
-            <b>Binhui Xie</b>, Longhui Yuan, Shuang Li, Chi Harold Liu, Xinjing Cheng
+            <b>Binhui Xie</b>, Longhui Yuan, Shuang Li, Chi Harold Liu, and Xinjing Cheng
           </p>
           <p>
             A region-based acquisition strategy for DA Segmentation queries image regions that are both diverse in
@@ -314,7 +380,7 @@ tags: about
                 2022</span></a>
           </p>
           <p>
-            <b>Binhui Xie</b>, Longhui Yuan, Shuang Li, Chi Harold Liu, Xinjing Cheng, Guoren Wang
+            <b>Binhui Xie</b>, Longhui Yuan, Shuang Li, Chi Harold Liu, Xinjing Cheng, and Guoren Wang
           </p>
           <p>
             A new perspective to select a highly informative subset of unlabeled target data under domain shift via
@@ -349,7 +415,7 @@ tags: about
                 style="color:red">T-PAMI (IF: 24.31)</span></a>
           </p>
           <p>
-            Shuang Li, <b>Binhui Xie</b>, Qiuxia Lin, Chi Harold Liu, Gao Huang, Guoren Wang
+            Shuang Li, <b>Binhui Xie</b>, Qiuxia Lin, Chi Harold Liu, Gao Huang, and Guoren Wang
           </p>
           <p>
             We develop GDCAN to automatically determine whether domain channel activations should be separately modeled
@@ -380,7 +446,7 @@ tags: about
                 style="color:red">TKDE</span></a>
           </p>
           <p>
-            <b>Binhui Xie</b>, Shuang Li, Fangrui Lv, Chi Harold Liu, Guoren Wang, Dapeng Wu
+            <b>Binhui Xie</b>, Shuang Li, Fangrui Lv, Chi Harold Liu, Guoren Wang, and Dapeng Wu
           </p>
           <p>
             We introduce a collaborative alignment framework that integrates global structure information and local
@@ -409,7 +475,7 @@ tags: about
             <a href="https://2020.acmmm.org" class="uline-special"><span style="color:red">MM 2020</span></a>
           </p>
           <p>
-            Shuang Li, <b>Binhui Xie</b>, Jiashu Wu, Ying Zhao, Chi Harold Liu, Zhengming Ding
+            Shuang Li, <b>Binhui Xie</b>, Jiashu Wu, Ying Zhao, Chi Harold Liu, and Zhengming Ding
           </p>
           <p>
             A HDA method simultaneously exploits correlations among categories and aligns the centroids for each
@@ -468,7 +534,7 @@ tags: about
                       <a href="https://2019.acmmm.org" class="uline-special"><span style="color:red">MM 2019</span></a>
                   </p>
                   <p>
-                      Shuang Li, Chi Harold Liu, <b>Binhui Xie</b>, Limin Su, Zhengming Ding, Gao Huang
+                      Shuang Li, Chi Harold Liu, <b>Binhui Xie</b>, Limin Su, Zhengming Ding, and Gao Huang
                   </p>
                   <p>
                       JADA simultaneously aligns domain-wise and class-wise distributions across source and target in a unified adversarial learning process.
@@ -613,7 +679,7 @@ tags: about
     Organizer of Workshop: VALSE 2022 (Student Workshop).
   </p>
   <p>
-    Reviewer for CVPR'23, ICLR'23, AAAI'23, ECCV'22, CVPR'22, AAAI'22, ICCV'21, CVPR'21, AAAI'21, etc.
+    Reviewer for ICCV'23, CVPR'23, ICLR'23, AAAI'23, ECCV'22, CVPR'22, AAAI'22, ICCV'21, CVPR'21, AAAI'21, etc.
   </p>
   <p>
     Reviewer for TPAMI, TNNLS, TMM, etc.
