--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ tags: about
             A novel one-stage adaptation framework that highlights the semantic concepts of individual pixel to promote
             learning of class-discriminative and class-balanced pixel embedding space across domains.
           </p>
-          <a href="blog/sepico-web/index.html" class="btn btn-outline-primary btn-sm" role="button"
+          <a href="{{ site.baseurl }}blog/sepico-web/index.html" class="btn btn-outline-primary btn-sm" role="button"
             aria-pressed="true">Project</a>
           <a href="https://arxiv.org/abs/2204.08808" class="btn btn-outline-primary btn-sm" role="button"
             aria-pressed="true">Paper</a>
