--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ tags: about
 
     <li>
       <p>[Feb 2023] Two papers on function model (<a href="https://arxiv.org/abs/2211.07636" class="uline"> 
-        EVA</a>) and test-time adaptation (<a href="binhuixie.github.io" class="uline"> RoTTA</a>) are accepted by CVPR 2023!</p>
+        EVA</a>) and test-time adaptation (<a href="https://arxiv.org/abs/2303.13899" class="uline"> RoTTA</a>) are accepted by CVPR 2023!</p>
     </li>
     <li>
         <p>[Jan 2023] Our <a href="https://arxiv.org/abs/2204.08808" class="uline">SePiCo</a> for domain adaptive semantic segmentation is accepted by <font color="red">T-PAMI</font> (IF: 24.31)!</p>
@@ -263,6 +263,33 @@ tags: about
         </td>
       </tr>
 
+       <!-- CVPR RoTTA -->
+       <tr>
+        <td valign="middle" width="35%">
+          <div class="one" style="text-align:center;">
+            <img src="images/cvpr2023_rotta.png" style="max-height: 300px;">
+          </div>
+        </td>
+        <td valign="middle" width="65%">
+          <h5>
+            Robust Test-Time Adaptation in Dynamic Scenarios
+          </h5>
+          <p>
+            <a href="https://cvpr2023.thecvf.com" class="uline-special"><span style="color:red">CVPR 2023</span></a>
+          </p>
+          <p>
+            Longhui Yuan, <b>Binhui Xie</b> and Shuang Li
+          </p>
+          <p>
+            RoTTA presents a new practical test-time adaptation setting where environments gradually change and the test data is sampled correlatively over time.
+          </p>
+          <a href="https://arxiv.org/abs/2303.13899" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Paper</a>
+          <a href="https://github.com/BIT-DA/RoTTA" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Code</a>
+        </td>
+      </tr>
+
       <!-- CVPR EVA -->
       <tr>
         <td valign="middle" width="35%">
@@ -275,7 +302,7 @@ tags: about
             EVA: Exploring the Limits of Masked Visual Representation Learning at Scale
           </h5>
           <p>
-            <a href="https://cvpr2023.thecvf.com" class="uline-special"><span style="color:red">CVPR 2023</span></a>
+            <a href="https://cvpr2023.thecvf.com" class="uline-special"><span style="color:red">CVPR 2023 (highlight)</span></a>
           </p>
           <p>
             Yuxin Fang, Wen Wang, <b>Binhui Xie</b>, Quan Sun, Ledell Yu Wu, Xinggang Wang, Tiejun Huang, Xinlong Wang, and Yue Cao
@@ -292,33 +319,6 @@ tags: about
           <!-- <a href="https://www.dropbox.com/s/pvb2701k2gr9cfb/aaai23poster.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Poster</a> -->
         </td>
       </tr>
-
-      <!-- CVPR RoTTA -->
-      <!-- <tr>
-        <td valign="middle" width="35%">
-          <div class="one" style="text-align:center;">
-            <img src="images/cvpr2023_rotta.png" style="max-height: 300px;">
-          </div>
-        </td>
-        <td valign="middle" width="65%">
-          <h5>
-            Robust Test-Time Adaptation in Dynamic Scenarios
-          </h5>
-          <p>
-            <a href="https://cvpr2023.thecvf.com" class="uline-special"><span style="color:red">CVPR 2023</span></a>
-          </p>
-          <p>
-            Longhui Yuan*, <b>Binhui Xie*</b>, and Shuang Li
-          </p>
-          <p>
-            RoTTA presents a new practical test-time adaptation setting where environments gradually change and the test data is sampled correlatively over time.
-          </p>
-          <a href="https://arxiv.org/abs/xxx" class="btn btn-outline-primary btn-sm" role="button"
-            aria-pressed="true">Paper</a>
-          <a href="https://github.com/BIT-DA/RoTTA" class="btn btn-outline-primary btn-sm" role="button"
-            aria-pressed="true">Code</a>
-        </td>
-      </tr> -->
 
       <!-- AAAI VBLC -->
       <tr>
