--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@ tags: about
 <div class="bio" style="text-align:justify">
   <!-- <hr/> -->
   <p>
-    I am a fourth-year Ph.D. student at Beijing Institute of Technology, advised by <a href="https://shuangli.xyz"
+    I am a penultimate-year Ph.D. student at Beijing Institute of Technology, advised by <a href="https://shuangli.xyz"
       class="uline">Prof. Shuang Li</a> and Prof. Chi Harold Liu. I received my Bachelor's degree in Software
     Engineering from <a href="https://www.bit.edu.cn" class="uline">BIT</a> (2015-2019).
   </p>
 
   <p>
-    My research interests are in foundation models, transfer learning, data-efficient learning (particularly domain adaptation, active learning) and self-supervised learning.
+    My research interests are in transfer learning, data-efficient learning (particularly unsupervised domain adaptation and active learning) and multimodal learning.
   </p>
 
   <p>
@@ -116,16 +116,14 @@ tags: about
   <ul>
 
     <li>
-      <p>[Feb 2023] Two papers on function model (<a href="https://arxiv.org/abs/2211.07636" class="uline"> 
-        EVA</a>) and test-time adaptation (<a href="https://arxiv.org/abs/2303.13899" class="uline"> RoTTA</a>) are accepted by CVPR 2023!</p>
+      <p>[Feb 2023] Two papers on representation learning (<a href="https://arxiv.org/abs/2211.07636" class="uline">EVA <font color="red">highlight</font></a>) and test-time adaptation (<a href="https://arxiv.org/abs/2303.13899" class="uline">RoTTA</a>) are accepted by CVPR 2023!</p>
     </li>
     <li>
         <p>[Jan 2023] Our <a href="https://arxiv.org/abs/2204.08808" class="uline">SePiCo</a> for domain adaptive semantic segmentation is accepted by <font color="red">T-PAMI</font> (IF: 24.31)!</p>
       </li>
 
     <li>
-      <p>[Nov 2022] Our <a href="https://arxiv.org/abs/2211.12256" class="uline"> VBLC </a> for semantic
-        segmentation under adverse conditions is accepted by AAAI 2023 (<font color="red">ORAL</font>)!</p>
+      <p>[Nov 2022] Our <a href="https://arxiv.org/abs/2211.12256" class="uline"> VBLC </a> for semantic segmentation under adverse conditions is accepted by AAAI 2023 (<font color="red">ORAL</font>)!</p>
     </li>
 
     <!-- <li>
@@ -133,7 +131,7 @@ tags: about
     </li> -->
 
     <li>
-      <p>[Jun 2022] Our <a href="https://ieeexplore.ieee.org/document/9803869" class="uline">CAF</a> for domain adaptaion is accepted by TKDE!</p>
+      <p>[Jun 2022] Our <a href="https://ieeexplore.ieee.org/document/9803869" class="uline">CAF</a> for domain adaptation is accepted by TKDE!</p>
     </li>
 
     <li>
@@ -174,12 +172,11 @@ tags: about
     <ul>
 
       <li>
-        <p> [Jan 2020] Our <a href="https://ieeexplore.ieee.org/document/8951259" class="uline">DTLC</a> for shallow domain adpatation is accepted by TNNLS! </p>
+        <p> [Jan 2020] Our <a href="https://ieeexplore.ieee.org/document/8951259" class="uline">DTLC</a> for shallow domain adaptation is accepted by TNNLS! </p>
     </li>
 
       <li>
-        <p>[Dec 2019] Our <a href='https://arxiv.org/abs/2005.06717' class='uline'>DCAN</a> for domain
-          adaptation is accepted by AAAI 2020!</p>
+        <p>[Dec 2019] Our <a href='https://arxiv.org/abs/2005.06717' class='uline'>DCAN</a> for domain adaptation is accepted by AAAI 2020!</p>
       </li>
 
       <li>
@@ -263,99 +260,8 @@ tags: about
         </td>
       </tr>
 
-       <!-- CVPR RoTTA -->
+       <!-- CVPR RIPU -->
        <tr>
-        <td valign="middle" width="35%">
-          <div class="one" style="text-align:center;">
-            <img src="images/cvpr2023_rotta.png" style="max-height: 300px;">
-          </div>
-        </td>
-        <td valign="middle" width="65%">
-          <h5>
-            Robust Test-Time Adaptation in Dynamic Scenarios
-          </h5>
-          <p>
-            <a href="https://cvpr2023.thecvf.com" class="uline-special"><span style="color:red">CVPR 2023</span></a>
-          </p>
-          <p>
-            Longhui Yuan, <b>Binhui Xie</b> and Shuang Li
-          </p>
-          <p>
-            RoTTA presents a new practical test-time adaptation setting where environments gradually change and the test data is sampled correlatively over time.
-          </p>
-          <a href="https://arxiv.org/abs/2303.13899" class="btn btn-outline-primary btn-sm" role="button"
-            aria-pressed="true">Paper</a>
-          <a href="https://github.com/BIT-DA/RoTTA" class="btn btn-outline-primary btn-sm" role="button"
-            aria-pressed="true">Code</a>
-        </td>
-      </tr>
-
-      <!-- CVPR EVA -->
-      <tr>
-        <td valign="middle" width="35%">
-          <div class="one" style="text-align:center;">
-            <img src="images/cvpr2023_eva.png" style="max-height: 300px;">
-          </div>
-        </td>
-        <td valign="middle" width="65%">
-          <h5>
-            EVA: Exploring the Limits of Masked Visual Representation Learning at Scale
-          </h5>
-          <p>
-            <a href="https://cvpr2023.thecvf.com" class="uline-special"><span style="color:red">CVPR 2023 (highlight)</span></a>
-          </p>
-          <p>
-            Yuxin Fang, Wen Wang, <b>Binhui Xie</b>, Quan Sun, Ledell Yu Wu, Xinggang Wang, Tiejun Huang, Xinlong Wang, and Yue Cao
-          </p>
-          <p>
-            EVA is the first open-sourced billion-scale vision foundation model that achieves state-of-the-art performance on a broad range of downstream tasks.
-          </p>
-          <a href="https://arxiv.org/abs/2211.07636" class="btn btn-outline-primary btn-sm" role="button"
-            aria-pressed="true">Paper</a>
-          <a href="https://github.com/baaivision/EVA" class="btn btn-outline-primary btn-sm" role="button"
-            aria-pressed="true">Code</a>
-          <!-- <a href="https://www.bilibili.com/video/av692744964" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Video</a> -->
-          <!-- <a href="https://www.dropbox.com/s/8ozwc8uw1q1tqlf/eada_slides.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Slides</a> -->
-          <!-- <a href="https://www.dropbox.com/s/pvb2701k2gr9cfb/aaai23poster.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Poster</a> -->
-        </td>
-      </tr>
-
-      <!-- AAAI VBLC -->
-      <tr>
-        <td valign="middle" width="35%">
-          <div class="one" style="text-align:center;">
-            <img src="images/aaai2023_VBLLC.png" style="max-height: 300px;">
-          </div>
-        </td>
-        <td valign="middle" width="65%">
-          <h5>
-            VBLC: Visibility Boosting and Logit-Constraint Learning for Domain Adaptive Semantic Segmentation under
-            Adverse Conditions
-          </h5>
-          <p>
-            <a href="https://aaai.org/Conferences/AAAI-23/" class="uline-special"><span style="color:red">AAAI
-                2023 (Oral)</span></a>
-          </p>
-          <p>
-            Mingjia Li*, <b>Binhui Xie*</b>, Shuang Li, Chi Harold Liu, and Xinjing Cheng
-          </p>
-          <p>
-            VBLC tackles the problem of domain adaptive semantic segmentation under adverse conditions, getting rid of
-            reference images.
-          </p>
-          <a href="https://arxiv.org/abs/2211.12256" class="btn btn-outline-primary btn-sm" role="button"
-            aria-pressed="true">Paper</a>
-          <a href="https://github.com/BIT-DA/VBLC" class="btn btn-outline-primary btn-sm" role="button"
-            aria-pressed="true">Code</a>
-          <a href="https://www.bilibili.com/video/av692744964" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Video</a>
-            <!-- <a href="https://www.dropbox.com/s/8ozwc8uw1q1tqlf/eada_slides.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Slides</a> -->
-            <a href="https://www.dropbox.com/s/pvb2701k2gr9cfb/aaai23poster.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Poster</a>
-        </td>
-      </tr>
-
-
-      <!-- CVPR RIPU -->
-      <tr>
         <td valign="middle" width="35%">
           <div class="one" style="text-align:center;">
             <img src="images/cvpr2022_RIPU.png" style="max-height: 300px;">
@@ -456,6 +362,98 @@ tags: about
         </td>
       </tr>
 
+       <!-- CVPR RoTTA -->
+       <tr>
+        <td valign="middle" width="35%">
+          <div class="one" style="text-align:center;">
+            <img src="images/cvpr2023_rotta.png" style="max-height: 300px;">
+          </div>
+        </td>
+        <td valign="middle" width="65%">
+          <h5>
+            Robust Test-Time Adaptation in Dynamic Scenarios
+          </h5>
+          <p>
+            <a href="https://cvpr2023.thecvf.com" class="uline-special"><span style="color:red">CVPR 2023</span></a>
+          </p>
+          <p>
+            Longhui Yuan, <b>Binhui Xie</b> and Shuang Li
+          </p>
+          <p>
+            RoTTA presents a new practical test-time adaptation setting where environments gradually change and the test data is sampled correlatively over time.
+          </p>
+          <a href="https://arxiv.org/abs/2303.13899" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Paper</a>
+          <a href="https://github.com/BIT-DA/RoTTA" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Code</a>
+            <a href="https://www.youtube.com/watch?v=dEhpVOM0I6Q"
+            class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Video</a>
+        </td>
+      </tr>
+
+      <!-- CVPR EVA -->
+      <tr>
+        <td valign="middle" width="35%">
+          <div class="one" style="text-align:center;">
+            <img src="images/cvpr2023_eva.png" style="max-height: 300px;">
+          </div>
+        </td>
+        <td valign="middle" width="65%">
+          <h5>
+            EVA: Exploring the Limits of Masked Visual Representation Learning at Scale
+          </h5>
+          <p>
+            <a href="https://cvpr2023.thecvf.com" class="uline-special"><span style="color:red">CVPR 2023 (Highlights)</span></a>
+          </p>
+          <p>
+            Yuxin Fang, Wen Wang, <b>Binhui Xie</b>, Quan Sun, Ledell Yu Wu, Xinggang Wang, Tiejun Huang, Xinlong Wang, and Yue Cao
+          </p>
+          <p>
+            EVA is the first open-sourced billion-scale vision foundation model that achieves state-of-the-art performance on a broad range of downstream tasks.
+          </p>
+          <a href="https://arxiv.org/abs/2211.07636" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Paper</a>
+          <a href="https://github.com/baaivision/EVA" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Code</a>
+          <!-- <a href="https://www.bilibili.com/video/av692744964" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Video</a> -->
+          <!-- <a href="https://www.dropbox.com/s/8ozwc8uw1q1tqlf/eada_slides.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Slides</a> -->
+          <!-- <a href="https://www.dropbox.com/s/pvb2701k2gr9cfb/aaai23poster.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Poster</a> -->
+        </td>
+      </tr>
+
+      <!-- AAAI VBLC -->
+      <tr>
+        <td valign="middle" width="35%">
+          <div class="one" style="text-align:center;">
+            <img src="images/aaai2023_VBLLC.png" style="max-height: 300px;">
+          </div>
+        </td>
+        <td valign="middle" width="65%">
+          <h5>
+            VBLC: Visibility Boosting and Logit-Constraint Learning for Domain Adaptive Semantic Segmentation under
+            Adverse Conditions
+          </h5>
+          <p>
+            <a href="https://aaai.org/Conferences/AAAI-23/" class="uline-special"><span style="color:red">AAAI
+                2023 (Oral)</span></a>
+          </p>
+          <p>
+            Mingjia Li*, <b>Binhui Xie*</b>, Shuang Li, Chi Harold Liu, and Xinjing Cheng
+          </p>
+          <p>
+            VBLC tackles the problem of domain adaptive semantic segmentation under adverse conditions, getting rid of
+            reference images.
+          </p>
+          <a href="https://arxiv.org/abs/2211.12256" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Paper</a>
+          <a href="https://github.com/BIT-DA/VBLC" class="btn btn-outline-primary btn-sm" role="button"
+            aria-pressed="true">Code</a>
+          <a href="https://www.bilibili.com/video/av692744964" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Video</a>
+            <!-- <a href="https://www.dropbox.com/s/8ozwc8uw1q1tqlf/eada_slides.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Slides</a> -->
+            <a href="https://www.dropbox.com/s/pvb2701k2gr9cfb/aaai23poster.pdf?dl=0" class="btn btn-outline-primary btn-sm" role="button" aria-pressed="true">Poster</a>
+        </td>
+      </tr>
+
       <!-- TKDE CAF -->
       <tr>
         <td valign="middle" width="35%">
@@ -484,7 +482,6 @@ tags: about
             aria-pressed="true">Code</a>
         </td>
       </tr>
-
 
       <!-- MM SSAN -->
       <tr>
@@ -805,10 +802,10 @@ tags: about
     Organizer of Workshop: VALSE 2022 (Student Workshop).
   </p>
   <p>
-    Reviewer for NeurIPS'23, ICCV'23, CVPR'23, ICLR'23, AAAI'23, ECCV'22, CVPR'22, AAAI'22, ICCV'21, CVPR'21, AAAI'21, etc.
+    Reviewer for AAAI'24, NeurIPS'23, ICCV'23, CVPR'23, ICLR'23, AAAI'23, ECCV'22, CVPR'22, AAAI'22, ICCV'21, CVPR'21, AAAI'21, etc.
   </p>
   <p>
-    Reviewer for TPAMI, TNNLS, TMM, etc.
+    Reviewer for TKDE, TIV, etc.
   </p>
 </div>
 
